# dnd-sound-master

./: .gitignore  CMakeLists.txt  README.md  main.cpp
res/: res.qrc  style.qss
src/: MainWindow.cpp  MainWindow.h  TrackWidget.cpp  TrackWidget.h
